add project portfolio

--- a/index.html
+++ b/index.html
@@ -250,6 +250,36 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/e-presensi.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/e-presensi.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="E-Presensi with Laravel 9"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/choerulram/E-presensi?tab=readme-ov-file" title="Lihat Detail" target="_blank" rel="noopener noreferrer"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/code-igniter-komik.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/code-igniter-komik.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Komik with Code Igniter 4"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/choerulram/Code-Igniter" title="Lihat Detail" target="_blank" rel="noopener noreferrer"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/laravel-9-cara-fajar.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/laravel-9-cara-fajar.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Belajar Dasar Laravel 9 | Cara Fajar"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/choerulram/Laravel-9" title="Lihat Detail" target="_blank" rel="noopener noreferrer"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
