add jwd project

--- a/index.html
+++ b/index.html
@@ -280,6 +280,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-projects">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/jwd-project.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/jwd-project.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sistem Pendataan Karyawan dengan PHP Native"><i class="bx bx-plus"></i></a>
+                <a href="https://achmadlutfiyamelindanida.000webhostapp.com/" title="Lihat Detail" target="_blank" rel="noopener noreferrer"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-certificate">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
